--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
-    <title>Vite + React</title>
+    <link
+      rel="shortcut icon"
+      href="./public/icons/faviconChair.png"
+      type="image/x-icon"
+    />
+    <title>Furnival</title>
   </head>
   <body>
     <div id="root"></div>
