--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     />
     <link
       rel="shortcut icon"
-      href="./public/icons/faviconChair.png"
+      href="./public/images/logo.png"
       type="image/x-icon"
     />
     <title>Furnival</title>
-
-
   </head>
   <body>
     <div id="root"></div>
