--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="./public/images/logo.png"
       type="image/x-icon"
     />
-    <title>Furnival</title>
+    <title>Khoulod</title>
   </head>
   <body>
     <div id="root"></div>
